# hra-gnn

./: .gitignore  README.md  pyproject.toml  requirements-baselines.txt  requirements.txt  run.py
configs/: adfa_ld.yaml  base.yaml  baselines.lock.yaml  flowgraph.yaml  hdfs.yaml  synthetic.yaml  tracelog.yaml  tracelog_tuned.yaml
doc/: ADFA-LD_AP改进与固定协议复评.md  FlowGraph_ECDF-Max与ADFA-LD序列增强评分详解.md  HRA-GNN大规模种子搜索与最终AUROC_AP表分析.md  主表第一次实验.md  代码与论文实现详解.md  复现状态.md  实验总览.md  数据集与模型评测工作拆分.md  数据集说明与派生图构建过程.md  评分公式恢复证据.md  近期Baseline服务器验收记录.md
hra_gnn/: __init__.py  adfa_scoring.py  augment.py  baselines.py  checkpoint_runs.py  cli.py  config.py  data.py  diagnostics.py  experiments.py  graph.py  interop.py  metrics.py  model.py  plotting.py  preprocessing.py  recent_baselines.py  recent_experiments.py  reporting.py  rescoring.py  trainer.py  tuning.py  utils.py
reference_results/: adfa_full_hparam_extension_hybrid_runs.csv  adfa_full_seed_extension_hybrid_runs.csv  adfa_ld_fixed1000_best.csv  adfa_ld_hra_seed9_hybrid_metrics.json  adfa_ld_hra_seed9_ssl020_config.yaml  adfa_ld_hybrid_ablation_seed9.csv  direct_baselines_diagnostic.tex  direct_baselines_two_datasets.tex  final_paper_auroc_ap_best.csv  final_paper_auroc_ap_best.tex  final_paper_auroc_ap_best_no_hdfs.tex  four_dataset_diagnostic.tex  hra_seed_sweep_all_runs.csv  hra_seed_sweep_summary.csv  main_table_first_all_models_best.csv  main_table_first_all_models_best.tex  main_table_first_recent_best.csv  main_table_first_recent_best.tex  model_complexity_theory.tex  model_parameters_tracelog.csv  model_parameters_tracelog.tex  paper_ablation.csv  paper_ablation.tex  (+7 more)
(+179 files in other folders)
