[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hra-gnn-reproduction"
version = "0.1.0"
description = "Reproducible HRA-GNN implementation built from HRGCN"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "matplotlib>=3.7",
  "seaborn>=0.13",
  "psutil>=5.9",
  "olefile>=0.47",
  "tensorboard>=2.16",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.12"]

[tool.setuptools.packages.find]
include = ["hra_gnn*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
exclude = ["src"]
